# dispatch

./: .gitignore  README.md  config.yaml  config.yaml.example  pyproject.toml  run_email_watcher.sh  run_gmail_watcher.sh  run_manifest_watcher.sh  run_print_watcher.sh
.github/: .github-instructions.md
.github/workflows/: deploy.yml  tests.yml
docs/issues/: ISSUE_2_PROJECT_SKELETON.md  ISSUE_3_ADDPRINT_WATCHER.md  ISSUE_4_ADD_EMAIL_WATCHER.md  ISSUE_5_ADD_TESTS.md
openspec/changes/archive/2026-04-11-build-dispatch/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-11-build-dispatch/specs/email-watcher/: spec.md
openspec/changes/archive/2026-04-11-build-dispatch/specs/watcher-tests/: spec.md
openspec/changes/archive/2026-05-08-manifest-emailer/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-08-manifest-emailer/specs/manifest-emailer/: spec.md
openspec/changes/manifest-emailer/: design.md
openspec/specs/print-watcher/: spec.md
openspec/specs/project-skeleton/: spec.md
src/dispatch/: email_watcher.py  gmail_watcher.py  manifest_watcher.py  print_watcher.py
tests/: test_email_watcher.py  test_gmail_watcher.py  test_manifest_watcher.py  test_print_watcher.py
